--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Assignment 4 - ThaoTruong</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <h1>Popular movies</h1>
@@ -24,7 +26,8 @@
                 <th scope="col">Release date</th>
                 </tr>
             </thead>
-            <tbody id='result'></tbody>
+            <tbody id='result'>
+            </tbody>
         </table>
         <a id='previous' href="#">&#8810;Previous page</a> &#9474;
         <a id='next' href="#">Next page&#8811;</a>
@@ -40,8 +43,8 @@
                 </button>
                 </div>
                 <div class="modal-body">
-                <p>Release 30/7/2018</p>
-                <img src="https://image.tmdb.org/t/p/w500/AkJQpZp9WoNdj7pLYSj1L0RcMMN.jpg" alt="">
+                    <p>Release 30/7/2018</p>
+                    <img src="https://image.tmdb.org/t/p/w500/AkJQpZp9WoNdj7pLYSj1L0RcMMN.jpg" alt="">
                 </div>
                 <div class="modal-footer">
                 <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
@@ -55,7 +58,7 @@
     <script id='template' type="text/template">
         {{#results}}
         <tr>
-            <th scope="row" title="{{overview}}" class='title' data-toggle="modal" data-target="#exampleModalCenter" data-value='{{id}}'>{{title}}</th>
+            <th scope="row" class='title' data-toggle="modal" data-tooltip="tooltip"  data-placement="bottom" title="{{overview}}" data-target="#exampleModalCenter" data-value='{{id}}'>{{title}}</th>
             <td>{{vote_count}}</td>
             <td>{{vote_average}}</td>
             <td>{{popularity}}</td>
@@ -63,6 +66,6 @@
         </tr>
         {{/results}}
     </script>
-    <script src="script.js"></script>
+    
 </body>
 </html>
