--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <h1 id="test" data-tooltip="tooltip" data-placement="bottom" title="bla bla" data-trigger="click">Popular movies</h1>
+    <h1>Popular movies</h1>
     <div id="container">
         <table class="table table-hover table-bordered">
             <thead class="table-info">
@@ -47,7 +47,6 @@
                     <img src="https://image.tmdb.org/t/p/w500/AkJQpZp9WoNdj7pLYSj1L0RcMMN.jpg" alt="">
                 </div>
                 <div class="modal-footer">
-                <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
                 </div>
             </div>
             </div>
