Fix tooltip arrow when tooltip at the bottom

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <h1>Popular movies</h1>
     <div id="container">
+        <!-- Movie table -->
         <table class="table table-hover table-bordered">
             <thead class="table-info">
                 <tr>
@@ -26,9 +27,11 @@
                 <th scope="col">Release date</th>
                 </tr>
             </thead>
-            <tbody id='result'>
-            </tbody>
+            <!-- Display AJAX call -->
+            <tbody id='result'></tbody>
         </table>
+
+        <!-- Previous & Next  -->
         <a id='previous' href="#">&#8810;Previous page</a> &#9474;
         <a id='next' href="#">Next page&#8811;</a>
   
